--- a/templates/main.html
+++ b/templates/main.html
@@ -45,7 +45,7 @@
                       </div>
                       <div class="form-group form-check">
                         <div class="text-center">
-                        <a class="small" href="#">Quer saber + sobre o projeto ?</a></div>
+                        <a class="small" href="https://github.com/carlosal249/Prevendo-Atrasos-nas-Entregas">Quer saber + sobre o projeto ?</a></div>
                       </div>
                       <button type="submit" class="btn btn-primary" id='submit-area' value="submit" id="prever">Prever</button>
                     </form>
