--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Eventually by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Prevendo atrasos nas entregas</title>
@@ -8,7 +13,6 @@
     <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
-<link rel="stylesheet" href="../static/main.css">
 
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -45,16 +49,18 @@
                       </div>
                       <div class="form-group form-check">
                         <div class="text-center">
-                        <a class="small" href="https://github.com/carlosal249/Prevendo-Atrasos-nas-Entregas">Quer saber + sobre o projeto ?</a></div>
+                        <a class="small" href="#">Quer saber + sobre o projeto ?</a></div>
                       </div>
                       <button type="submit" class="btn btn-primary" id='submit-area' value="submit" id="prever">Prever</button>
                     </form>
                   </div>
-                    {% if previsao == 0 %}
-                    <p id='resultado'>O modelo prevê  que sua entrega nao ira atrasar!</p>
-                    {% endif %}
-                    {% if previsao == 1 %}
-                    <p id='resultado'>O modelo prevê  que sua entrega ira atrasar!, com{{previsao_proba}}% de certeza</p>
+                    {% if previsao_proba %}
+                      {% if previsao_proba <= 0.50 %}
+                        <p id='resultado'>O modelo prevê  que sua entrega nao ira atrasar!</p>
+                      {% endif %}
+                      {% if previsao_proba >= 0.50 %}
+                        <p id='resultado'>O modelo prevê  que sua entrega ira atrasar!, com {{"%.4g" % (previsao_proba)}} de certeza</p>
+                      {% endif %}
                     {% endif %}
                 </div>
               </div>
