--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Eventually by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Prevendo atrasos nas entregas</title>
@@ -56,7 +51,7 @@
                   </div>
                     {% if previsao_proba %}
                       {% if previsao_proba <= 0.50 %}
-                        <p id='resultado'>O modelo prevê  que sua entrega nao ira atrasar!</p>
+                        <p id='resultado'>O modelo prevê  que sua entrega nao ira atrasar! com {{"%.4g" % (previsao_proba)}} de certeza </p>
                       {% endif %}
                       {% if previsao_proba >= 0.50 %}
                         <p id='resultado'>O modelo prevê  que sua entrega ira atrasar!, com {{"%.4g" % (previsao_proba)}} de certeza</p>
